src/test/deca/context/valid/ContextAvecObjet/This/thisFieldinFied.deca
//Description
//  Appel à this.field dans l'instanciation d'un field
//
//Réponse
//  ok

class A{
    int x;
    int y = this.x;
}